src/objects/Product_Indication_GLBL__c.object
<CustomObject>
    <description>Holds Product Indications from Material ODS to support the GSO. Created by Oliver Dunford. 24th Oct 2013.</description>
    <fields>
        <fullName>Cease_Pblsh_Dt_GLBL__c</fullName>
        <description>This represents the last date on which that record was published/refreshed in the Material ODS.   When this date is populated, it indicates that the record has been deleted.  This is one of the two fields that would be used for delta detection of changes to the Material ODS.
Created by John A Adams 11/1/2013</description>
        <label>Cease Publish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Crt_Dt_GLBL__c</fullName>
        <description>This represents the date on which the record was initially created in the Material Master Hub database.
Created by John A Adams 11/1/2013</description>
        <label>ODS Created Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description for Indication
Created by John A Adams 11/1/2013</description>
        <label>Description</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dialect_Nm_GLBL__c</fullName>
        <description>Language dialect of the translated data.
Created by John A Adams 11/1/2013</description>
        <label>Dialect Name</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indctn_Id_GLBL__c</fullName>
        <description>System generated unique ID for Indication
Created by John A Adams 11/1/2013</description>
        <label>Indication Id</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indctn_Typ_GLBL__c</fullName>
        <description>Indication Type (IND - Indication, IND_GRP – Indication Group)
Created by John A Adams 11/1/2013</description>
        <label>Type</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lst_Pblsh_Dt_GLBL__c</fullName>
        <description>This represents the date on which information was last published for this record to the Material ODS.  This date will be populated when the record is initially created in the ODS or when it is updated.  This is one of the two fields that would be used for delta detection of changes to the Material ODS.  
Created by John A Adams 11/1/2013</description>
        <label>Last Publish Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Master_Indication_GLBL__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Master Product (the default locale indication that all other Indications are translated from.
Created by John A Adams 11/1/2013</description>
        <label>Master Indication</label>
        <referenceTo>Product_Indication_GLBL__c</referenceTo>
        <relationshipLabel>Product Indications</relationshipLabel>
        <relationshipName>Product_Indications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Abbreviated Description of Indication
Created by John A Adams 10/31/2013</description>
        <label>Short Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of Indication (A – Active, I – Inactive)
Created by John A Adams 11/1/2013</description>
        <label>Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trnsltd_Indctn_Desc_GLBL__c</fullName>
        <description>Indication Description Text captured in the language dialect specified in DIALECT_NM.
Created by John A Adams 11/1/2013</description>
        <label>Translated Description</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trnsltd_Indctn_Short_Desc_GLBL__c</fullName>
        <description>Indication Abbreviated Description Text captured in the language dialect specified in DIALECT_NM.  This field is used for applications that are limited on display space, but need to display information about the indication.
Created by John A Adams 11/1/2013</description>
        <label>Translated Short Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updt_Dt_GLBL__c</fullName>
        <description>This represents the date on which the record was last updated in the Material Master Hub database.
Created by John A Adams 11/1/2013</description>
        <label>ODS Updated Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Product Indication</label>
    <nameField>
        <label>Product Indication Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Indications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Status_Rule</fullName>
        <active>true</active>
        <description>Status of Indication (A – Active, I – Inactive)
Created by John A Adams 11/1/2013</description>
        <errorConditionFormula>NOT(REGEX(Status__c,&quot;[AaIi]&quot;))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status of Indication must be either (A – Active, I – Inactive)</errorMessage>
    </validationRules>
</CustomObject>